<resources>
    <string name="app_name">Hubspot Demo</string>
    <string name="hubspot_button">Hubspot Button</string>
    <string name="floating_button_examples">Floating button examples</string>
    <string name="nav_bars_toolbars">Custom Toolbar</string>
    <string name="action_settings">Settings</string>
    <string name="regular_floating_button">Regular Floating Button</string>
    <string name="mini_floating_button">Mini Floating Button</string>
    <string name="extended_floating_button">Extended floating button</string>
    <string name="extended_fab_label">Extended FAB</string>
    <string name="chat">chat</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">FloatingButton</string>
    <string name="title_notifications">WebView</string>
    <string name="regular_floating_button_text">Hello, this is regular floating action button to start a chat</string>
    <string name="hubspot_layout_text">Hello, this is custom layout. Use this hubspot chat button to start a chat</string>
    <string name="extended_floating_button_text">Hello, this is extended floating action button to start a chat</string>
    <string name="mini_floating_button_text">Hello, this is mini floating action button to start a chat</string>
    <string name="email_label">Enter email</string>
    <string name="email_hint">Type Email</string>
    <string name="token_label">Enter Token</string>
    <string name="token_hint">Enter your token here</string>
    <string name="configure">Configure</string>
    <string name="label_there_is_an_issue_with_the_network_connection">Network Issue</string>
    <string name="label_custom_properties">Custom Properties</string>
    <string name="label_custom_properties_list_header">Keys and values made here are included in the custom chat properties via HubspotManager when opening chat</string>
    <string name="label_example_value">example-value</string>
    <string name="label_some_key">some-key</string>
    <string name="add">Add</string>
    <string name="key">Key</string>
    <string name="value">Value</string>
    <string name="back">Back</string>
    <string name="label_specific_chat_flow">Specific Chat Flows</string>
    <string name="label_setting_chat_flow">Setting Chat Flow</string>
    <string name="label_chat_id_description">When opening a chat view, one can optionally specify a chat flow. Here\'s a way to test that out. One option opens a default chat, no chatflow specified. Another opens a fixed chat flow - set as a constant code in code, for example for a specific sub section of the app. And lastly, a dynamic chatflow- perhaps device from push message, your server backend, or a dynamic config.</string>
    <string name="default_flow_id_specified">Default flow: name taken from config: mobileflow1</string>
    <string name="chat_flow_id_specified">Flow for this one is currently set to mobileflow2 - this id is hardcoded in the app</string>
    <string name="chat_flow_id_customize">Here, you can enter any chat flow id you want, for the configured hubspot portal, perhaps based on your api data</string>
    <string name="default_chat_flow_id">mobileflow3</string>
    <string name="notifications_permission_granted">Notifications permission granted</string>
    <string name="fcm_token">Click here to get FCM Token</string>
    <string name="here_is_the_fcm_token">Here is the FCM Token</string>
    <string name="notification_permission_dialog_title">Notification Permission</string>
    <string name="notification_permission_dialog_message">Notification permission is required, Please allow notification permission from setting</string>
    <string name="notification_permission_dialog_ok">Ok</string>
    <string name="notification_permission_dialog_cancel">Cancel</string>
    <string name="notification_permission_rationale_dialog_title">Alert</string>
    <string name="notification_permission_rationale_dialog_message">Notification permission is required, to show notification</string>
    <string name="delete_fcm_token">Click here to delete FCM token</string>
    <string name="action_logout">Logout</string>
    <string name="add_email_and_token_for_configuration">Add Email and Token for Configuration</string>
    <string name="sdk_options">SDK Options</string>
    <string name="current_config">Current Config</string>
    <string name="portal_id">Portal ID</string>
    <string name="hublet">Hublet</string>
    <string name="environment">Environment</string>
    <string name="default_chatflow">Default ChatFlow</string>
    <string name="user_identity">User Identity</string>
    <string name="not_set">Not Set</string>
    <string name="token">Token</string>
    <string name="email">Email</string>
    <string name="clear_config_data">Clear Config Data</string>
    <string name="email_token_configured"><![CDATA[Email & Token Configured]]></string>
</resources>